--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 					</div>
 					<div class="col-md-3 animate-box">
 						<div class="progress-wrap ftco-animate text-center">
-							<h3>Netlify</h3>
+							<h3>Heroku</h3>
 							<div class="">
 								<div>
 									<img src="./images/icons8-heroku.svg" class="icon-svg" alt="Heroku logo" />
