--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
 								performance, I love to fix bugs and make things work smoothly. I'm a humble person with an open
 								mind, always willing to share what I know and learn from others.
 							</p>
-							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+							<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5 ul-footer">
 								<li class="ftco-animate">
 									<a href="https://twitter.com/AleMontilla_dev" target="_blank"
 										><span class="icon-twitter"></span
@@ -934,7 +934,7 @@
 						<div class="ftco-footer-widget mb-4">
 							<h2 class="ftco-heading-2">Have questions?</h2>
 							<div class="block-23 mb-3">
-								<ul>
+								<ul class="">
 									<li><span class="icon icon-map-marker"></span><span class="text">Seville, Spain</span></li>
 									<li><span class="icon icon-phone"></span><span class="text">+34 667 45 29 75</span></li>
 									<li>
