--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 		</section> -->
 
 		<section class="ftco-section" id="skills-section">
-			<div class="container">
+			<div class="container-skills">
 				<div class="row justify-content-center pb-5">
 					<div class="col-md-12 heading-section text-center ftco-animate">
 						<h1 class="big big-2">Skills</h1>
@@ -353,7 +353,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>NodeJS</h3>
 							<div class="">
@@ -363,7 +363,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>React</h3>
 							<div class="">
@@ -373,17 +373,17 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Vue</h3>
-							<div class="">
+							<div>
 								<div>
 									<img src="./images/vue.png" class="icon-svg" alt="Vue logo" />
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Javascript</h3>
 							<div class="">
@@ -393,7 +393,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Typescript</h3>
 							<div class="">
@@ -403,7 +403,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>MongoDB</h3>
 							<div class="">
@@ -413,7 +413,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>MySQL</h3>
 							<div class="">
@@ -423,7 +423,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>HTML5</h3>
 							<div class="">
@@ -433,7 +433,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>CSS3</h3>
 							<div class="">
@@ -443,7 +443,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Bootstrap</h3>
 							<div class="">
@@ -453,7 +453,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Sass</h3>
 							<div class="">
@@ -464,7 +464,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Git</h3>
 							<div class="">
@@ -474,7 +474,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Github</h3>
 							<div class="">
@@ -484,7 +484,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Redux</h3>
 							<div class="">
@@ -494,7 +494,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Netlify</h3>
 							<div class="">
@@ -504,7 +504,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3 animate-box">
+					<div class="col-sm-2 col-lg-3 animate-box div-float">
 						<div class="progress-wrap ftco-animate text-center">
 							<h3>Heroku</h3>
 							<div class="">
