--- a/index.html
+++ b/index.html
@@ -796,7 +796,7 @@
 		</section> -->
 
 		<section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/bg_1.jpg)">
-			<div class="container">
+			<div class="container padding">
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
